--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="/.style.css">
     <title>Horiseon Social Media & SEO Marketing Agency</title>
 </head>
 
@@ -56,21 +56,21 @@
     <section class="benefits">
         <div class="benefit-lead">
             <h2>Lead Generation</h2>
-            <img src="./assets/images/lead-generation.png" alt="Gears funneling downward into cash">
+            <img src="./assets/lead-generation.png" alt="Gears funneling downward into cash">
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h2>Brand Awareness</h2>
-            <img src="./assets/images/brand-awareness.png" alt="Lightbulb radiating outward">
+            <img src="./assets/brand-awareness.png" alt="Lightbulb radiating outward">
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
             <h2>Cost Management</h2>
-            <img src="./assets/images/cost-management.png" alt="gears overlapped by cash"></img>
+            <img src="./assets/cost-management.png" alt="gears overlapped by cash"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
